--- a/devcamper_api/package.json
+++ b/devcamper_api/package.json
@@ -16,7 +16,8 @@
 		"express": "^4.17.1",
 		"express-fileupload": "^1.1.6-alpha.6",
 		"jsonwebtoken": "^8.5.1",
-		"morgan": "^1.9.1"
+		"morgan": "^1.9.1",
+		"nodemailer": "^6.3.1"
 	},
 	"devDependencies": {
 		"nodemon": "^1.19.4"
